# FuzeAgent

./: .claude_code_config  .env.backup  .env.example  .gitignore  .gitleaks.toml  .mcp.json  CLAUDE.md  Dockerfile.hierarchy  FuzeAgent_UI_MockServer_Analysis.md  MILESTONES_SYSTEM_README.md  MOCK_UI_README.md  Makefile  README.md  claude-doctor-wsl.sh  create_tables.py  create_tables_simple.py  deploy-memory-system.sh  docker-compose.dev.yml  docker-compose.minimal.yml  docker-compose.mock-ui.yml  docker-compose.yml  drop_triggers.sql  hierarchy_endpoints.py  init_db.sql  init_db.sql.deprecated  migrate-cli.py  openapi.json  quick_hierarchy_api.py  requirements-hierarchy.txt  run-mock-ui.bat  run-mock-ui.sh  setup.sh  setup_database.py  simple-ui.html  simple_proxy.py  ui-build-errors.txt
.claude/agents/: cli-engineer.md  fuzeagent-expert.md  mcp-engineer.md
.cursor/rules/: acion-over-instruction.mdc  codebase-versioning.mdc  react-expert.mdc
.fuze/: manifest.json
.github/workflows/: a2a-acceptance.yml  a2a-contract-tests.yml  a2a-unit.yml  auto-merge.yml  ci.yml  claude-ci-autofix.yml  e2e-smoke.yml  governance-sync.yml  harden-gate.yml  helm-validate.yml  nightly-integration.yml  release.yml  seal-secrets.yml  security.yml  test.yml
agent-templates/: A2A-BRIEF.md  INTEGRATION.md  README.md
agent-templates/a2a/: Dockerfile  README.md  __init__.py  _contract.py  adapter.py  authz.py  card_generator.py  config.py  identity.py  loader.py  pytest.ini  requirements.txt  runtime.py  server.py  session_store.py  task_mapper.py  validation.py  wire_errors.py
agent-templates/contracts/a2a/v1/client/: pyproject.toml  regenerate.sh
agent-templates/contracts/a2a/v1/client/fuze_a2a_client/: __init__.py  card_models.py  client.py  errors.py  wire_models.py
agent-templates/orchestration/: .a2a-mcp-wip  README.md  a2a_transport.py  relay.py
agent-templates/providers/: __init__.py  base.py
agent-templates/schema/: role-manifest.schema.json
containers/base-agent/: Dockerfile  agent.py  context_client.py
containers/claude-runner-base/: Dockerfile  session-relay.sh
containers/claude-runner-marketer/: Dockerfile
containers/claude-runner-python-dev/: Dockerfile
containers/claude-runner-qa/: Dockerfile
containers/claude-runner-react-dev/: Dockerfile
containers/developer-agent/: Dockerfile  agent.py  requirements.txt
containers/templates/: build.sh
containers/templates/dev-python/: .python_aliases  Dockerfile  pyproject.toml
deploy/acceptance/: gen_test_identity.py  jwks_server.py  values.acceptance.json
deploy/argocd/: app-of-apps.yaml
deploy/contabo/: README.md
docs/: API_REFERENCE.md  USER_GUIDE.md  autonomous-agent-execution-plan.md  claude-code-ai-team-implementation.md  database-migrations.md  fuzeagent-enhancement-plan.md  implementation-summary.md
docs/a2a/: README.md  authz-for-integrators.md  call-another-agent.md  enable-your-pod.md  example-fuzefront-plans-via-fuzeplan.md  go-live-checklist.md  mcp-pod-vs-a2a-pod.md
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/playwright-report/: index.html
e2e/tests/: fuzeagent-in-fuzefront.spec.ts
mcp-servers/fuzeagent-server/: Dockerfile  README.md  claude-desktop-config.json  docker-compose.yml  requirements.txt  run-mcp.sh  server.py
scripts/: build-dev.sh  build-prod.sh  build_containers.sh  health-check.sh  optimized-build.sh  test_autonomous_execution.py  wait-for-services.sh
services/ari_frontend/: Dockerfile  index.html  nginx.conf  package.json
services/backend/: Dockerfile  README.md  database.py  init-db.sql  init.sh  init_db.py  main.py  models.py  (+1 more)
(+404 files in other folders)
