[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fuze-a2a-client"
version = "1.0.0"
description = "Typed client for the Fuze A2A contract v1 (A2A specification 1.0.0)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FuzeOne" }]
keywords = ["a2a", "agent2agent", "fuze", "agents"]
dependencies = ["pydantic>=2.7"]

[project.optional-dependencies]
# The default transport. Optional so the package imports cleanly in environments
# that inject their own transport (tests, the Prism mock harness).
http = ["httpx>=0.27"]

[project.urls]
Homepage = "https://github.com/izzywdev/FuzeAgent"
Contract = "https://github.com/izzywdev/FuzeAgent/tree/main/agent-templates/contracts/a2a/v1"

[tool.setuptools.packages.find]
include = ["fuze_a2a_client*"]
